temporal/testenv/temporal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal
  labels:
    app: temporal
spec:
  ports:
  - port: 6767
    name: temporal
    nodePort: 30036
  clusterIP: None
  selector:
    app: temporal
